--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="x-ua-compatible" content="ie=edge" />
-        <title>Modele</title>
+		<meta http-equiv="x-ua-compatible" content="ie=edge" />
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
+        <title>Chat App</title>
     </head>
     <body>
         <div id="root"></div>
