--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -6,7 +6,9 @@
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
-        <title>Chat App</title>
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+		<title>Chat App</title>
     </head>
     <body>
         <div id="root"></div>
