--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -11,6 +11,9 @@
 		<title>Chat App</title>
     </head>
     <body>
+		<!-- Script js Socket.io -->
+		<script src="http://localhost:3001/socket.io/socket.io.js"></script>
         <div id="root"></div>
+		<script></script>
     </body>
 </html>
